--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -33,6 +33,7 @@ body {
 #header {
   grid-area: header;
   background-color: #294973;
+  width: 100%;
 }
 #content {
   grid-area: content;
@@ -71,17 +72,44 @@ body {
 .cabecalho {
   background-color: #294973;
   color: white;
-  display: inline-flex;
+  display: flex;
   flex-direction: row;
 }
 
-.MenuHorizontal li {
-  font-size: 30px;
-  display: inline-flex;
-  flex-direction: row;
+.MenuHorizontal {
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
-.MenuHorizontal li:hover {
+.nav-superior {
+  display: flex;
+  justify-content: space-around;
+  width: 30%;
+  margin-top: 3%;
+}
+
+.nav-superior p {
+  font-size: 1.3em;
+  
+}
+
+.MenuHorizontal input {
+  border: 0;
+  height: 30px;
+  width: 20%;
+  border-radius: 20px;
+  padding-left: 20px;
+  margin-top: 3%;
+}
+
+.MenuHorizontal img {
+  margin-right: 50px;
+}
+
+.nav-superior p:hover {
   text-shadow: 0.1em 0.1em 0.2em black;
 }
 
@@ -91,9 +119,10 @@ body {
 }
 
 .logo {
-  border-radius: 80%;
-  width: 189px;
-  height: 126px;
+  border-radius: 70%;
+  width: 120px;
+  height: 100px;
+  margin-top: 3%;
 
 }
 
